...
extension TrainingPeriodSelection.Preset {
    var title: String {
        switch self {
        case .oneWeek: return "1 неделя"
        case .twoWeeks: return "2 недели"
        case .oneMonth: return "1 месяц"
        case .threeMonths: return "3 месяца"
        case .sixMonths: return "6 месяцев"
        case .oneYear: return "1 год"
        }
    }
}

...
